buildsystem/network-sharing-server/src/scss/app.scss
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "colors";

$custom-theme-colors: map-merge($theme-colors, ("primary": $primary-color,
      "secondary": $primary-color-dark,
    ));

$theme-colors: map-merge($theme-colors, $custom-theme-colors);
$breadcrumb-divider: quote(">");
$breadcrumb-divider-color: $primary-color;
$breadcrumb-margin-bottom: 0;
$breadcrumb-bg: $background;
$breadcrumb-padding-x: 1rem;
$breadcrumb-border-radius: 8px;
$breadcrumb-padding-y: 6px;

@import "~bootstrap/scss/_maps";
@import "~bootstrap/scss/utilities";
@import "~bootstrap/scss/mixins";
@import "~bootstrap/scss/bootstrap.scss";

:root {
  --bs-link-hover-color: #ff7700;
}

@import "input-range";

body,
div,
dl,
dt,
dd,
ul,
ol,
li,
h1,
h2,
h3,
h4,
h5,
h6,
pre,
form,
fieldset,
input,
textarea,
p,
blockquote,
th,
td,
nav,
header,
footer {
  margin: 0;
  padding: 0;
}

main {
  min-height: calc(100vh - var(--navbar-height));
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

// This sets all <h1>,...,<h6> elements with Material headline1,...,headline6 typography styles
// Check out the MDC Web documentation for how to use MDC Typography Sass mixins:
// https://github.com/material-components/material-components-web/tree/master/packages/mdc-typography
body {
  background: $background;
  color: $text-color;
  height: 100vh;
  overflow: hidden;
}

#app {
  height: 100vh;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.empty-view-container {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
}

.navbar .form-group .form-control,
.navbar .form-group .input-group-btn button {
  border: 1px solid transparent;
  outline: none;
  box-shadow: none;
}

.navbar .form-group .form-control:focus {
  outline: none;
}


.borderless-card {
  border-bottom: none !important;
}

.page-header {
  padding-bottom: 9px;
  margin: 20px 0 20px;
  border-bottom: 1px solid #eee;
}

.card-heading {
  padding-bottom: 9px;
  border-bottom: 1px solid #eee;
}

.horizontal {
  display: flex;
  flex: 1 1 auto;
}

.vertical {
  flex-direction: column;
}

.navbar-default .navbar-nav>li>a {
  color: #777;
}

.flex-baseline {
  align-items: baseline;
}

.flex-center {
  justify-content: space-between;
}

.clickable {
  cursor: pointer;
}

.flex-container {
  display: flex;
}

.center-btn {
  justify-content: space-beetwen;
}

.navbar-brand {
  padding: 10px !important;
}

.list-group-item {
  border-bottom: 1px solid #eee;
}

.btn {
  border: none;
}

//medias

.media-overlay {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.3);
  transition: opacity 0.2s ease, visibility 0.2s;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 6px;
}

.media-img-top {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 6px;
}

.media-img-list[lazy=loading],
.media-img-top[lazy=loading] {
  background-color: $light-grey;
}

.media-img-list {
  width: 54px;
  height: 54px;
  object-fit: cover;
  border-radius: 6px;
}

.video>.media-img-list {
  width: 100%;
  height: 100%;
}

.media-img-list-tr:hover .media-overlay,
.media-img-container:hover .media-overlay {
  visibility: visible;
  opacity: 1;
}

.media-list .media-img-container {
  width: 54px;
}

.media-list .media-img-container.video {
  width: 104px;
}

.media-img-list-td {
  width: 54px;
}

.media-action-list-td {
  width: 48px;
}

.media-text {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  min-width: 0;
}

.overlay-more {
  position: absolute;
  bottom: 0px;
  right: 0px;
}

.overlay-more-container {
  flex: 0 0 48px;
}

.media-more li {
  cursor: pointer;
}

.media-content {
  padding-top: 16px;
}

.audio-img-container {
  background-color: $dark-background;
  border-radius: 7px;
}

.dropdown-menu {
  z-index: 1025;
}

.breadcrumb {
  margin-top: 4px;
  margin-bottom: 4px;
  margin-left: 24px;
  border: 1px solid $hover-grey;
  overflow: auto;
}

